feat: set up cli command dispatcher

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bpaf = "0.9.20"
+anyhow = "1.0.100"
+bpaf = { version = "0.9.20", features = ["bright-color"] }
+config = "0.15.19"
+lofty = "0.22.4"
+musicbrainz_rs = "0.12.0"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
-toml = "0.9.8"
+serde = { version = "1.0.228", features = ["derive"] }
+time = "0.3.44"
+
+[profile.release]
+strip = true
